Fix join button hover/focus on mobile

--- a/src/components/GetStartedForm/GetStartedForm.css
+++ b/src/components/GetStartedForm/GetStartedForm.css
@@ -76,6 +76,13 @@
   margin: 0.75rem auto 0 auto;
 }
 
+/* Join button shouldn't change to black on focus when over black form */
+.get-started-form__button_join.button_type_primary:hover,
+.get-started-form__button_join.button_type_primary:focus {
+  background: var(--main-accent-color-dark);
+  border-color: var(--main-accent-color-dark);
+}
+
 /* for highlighting the button once a valid token is entered */
 .get-started-form__join-button_ready {
   transform: scale(1.03125);
@@ -145,5 +152,12 @@
 
   .get-started-form__button_join {
     margin: 0 0 1.125em 0.9375rem;
+  }
+
+  /* Reset join button hover/focus when not on mobile */
+  .get-started-form__button_join.button_type_primary:hover,
+  .get-started-form__button_join.button_type_primary:focus {
+    background: var(--charcoal);
+    border-color: var(--charcoal);
   }
 }
